--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,9 @@
     border-radius: 7px;
     font-family: Lobster;
     background-color :#42a1f4;
-    border-color: #42a1f4
+    border-color: #42a1f4;
+     height: 55px;
+     width : 100px;
 }
 .img-box{
     background-color:white;
